# simalign

./: .gitignore  LICENSE  README.md  align_example.py  align_files.py  aligner.py  example.py  requirements.txt  setup.cfg  setup.py  simalign.py
examples/: align_example.py  align_files.py  convert_bpe_aligns_to_word.py  visualize.py
samples/: sample_deu.txt  sample_eng.txt  sample_eng_deu.gold
scripts/: align_files.py  calc_align_score.py  visualize.py
simalign/: __init__.py  setup.py  simalign.py
simalign/utils/: __init__.py  utils.py
utils/: .directory  bertalign.py  tokenization.py
