[metadata]
name = simalign
version = v0.4
author = Masoud Jalili Sabet, Philipp Dufter
author_email = philipp@cis.lmu.de,masoud@cis.lmu.de
description = Word Alignments using Pretrained Language Models
keywords = NLP deep learning transformer pytorch BERT Word Alignment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cisnlp/simalign
project_urls =
    Bug Tracker = https://github.com/cisnlp/simalign/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = simalign
install_requires = 
          numpy
          torch
          scipy
          transformers
          regex
          networkx
          scikit_learn
python_requires = >=3.6.0
zip_safe = False
